--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     width: 100vw;
     min-height: 100vh;
     display: grid;
-    grid-template-rows: 15% 80% 5%;
+    grid-template-rows: 15% 80% 5vh;
     grid-template-columns: 100%;
     padding: 0;
     margin: 0;
@@ -657,4 +657,5 @@ input[type="radio"]:checked::before {
     #tel-contact {
         display: grid;
     }
+
 }
