--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ html {
 html,
 body {
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     display: grid;
     grid-template-rows: 15% 80% 5%;
     grid-template-columns: 100%;
@@ -659,6 +659,7 @@ input[type="radio"]:checked::before {
     }
 
 }
+
 
 
 
